fixed project cards on manage page displaying incorrectly (Not stretching to fit row height)

--- a/project_go/static/css/style.css
+++ b/project_go/static/css/style.css
@@ -77,6 +77,13 @@ tr, th, td {
     align-items: stretch;
 }
 
+.flex-col {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    flex-direction: column;
+}
+
 .hidden {
     visibility: hidden;
 }
@@ -391,6 +398,10 @@ input, select {
     width: 240px;
 }
 
+.project-card {
+    flex-grow: 2;
+}
+
 .project-card-img {
     width: 240px;
     height: 200px;
@@ -489,4 +500,18 @@ input, select {
     box-sizing: content-box;
     margin-top: -15px;
     position: relative;
+}
+
+.banner-right, .banner-left {
+    position: absolute;
+    top: 50px;
+    background-color: var(--main-accent-color);
+}
+
+.banner-right {
+    right: 0;
+}
+
+.banner-left {
+    left: 0;
 }
